<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_gravity="center"
    tools:context=".MainActivity">


    <ImageView
        android:layout_marginTop="35dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo_senai"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:textStyle="bold"
        />

    <EditText
        android:id="@+id/log"
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:drawableLeft="@drawable/iconscustomer100"
        android:imeActionLabel="Search"
        android:imeOptions="actionNext"
        android:background="#0D000000"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/senha"
        android:textSize="18sp"
        android:textStyle="bold"
        />
    <EditText
        android:layout_width="180dp"
        android:layout_height="55dp"
        android:id="@+id/pass"
        android:drawableLeft="@drawable/iconspassword64"
        android:inputType="textPassword"
        android:background="#0D000000"
        android:imeOptions="actionDone"
        />

    <Switch
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textStyle="bold"
        android:text="@string/manterlogado"
        android:padding="10dp"
        android:id="@+id/switchlogado"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/entrar"
        android:textStyle="bold"
        android:textSize="17sp"
        android:id="@+id/btnlog"
        android:background="#00264d"
        android:textColor="#ffffff"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"
        >

        <TextView
            android:layout_marginTop="12dp"
            android:layout_marginLeft="30dp"
            android:id="@+id/txtrecusuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recusuario"
            android:textColor="@color/LinkColor"
            android:textSize="17sp"
            android:textStyle="bold"

            />


    </LinearLayout>

</LinearLayout>